--- a/style.css
+++ b/style.css
@@ -272,3 +272,59 @@ body {
   position: absolute;
   z-index: 30;
 }
+
+#chat-section {
+  display: none;
+  flex-direction: column;
+}
+
+#chat-messages {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  padding: 10px;
+  overflow-y: auto;
+}
+
+#chat-messages .message {
+  max-width: 65%;
+  padding: 10px 14px;
+  margin: 6px 0;
+  border-radius: 20px;
+  word-wrap: break-word;
+  font-size: 15px;
+}
+
+/* USER → Right side */
+#chat-messages .user-msg {
+  background-color: rgba(97, 211, 161, 0.557);
+  color: white;
+  align-self: flex-end;
+  border-bottom-right-radius: 0;
+}
+
+/* AI → Left side */
+#chat-messages .ai-msg {
+  background-color: rgba(8, 161, 222, 0.438);
+  color: white;
+  align-self: flex-start;
+  border-bottom-left-radius: 0;
+}
+
+#games-floating-btn {
+  animation: floatUpDown 2.8s ease-in-out infinite;
+}
+
+@keyframes floatUpDown {
+  0% {
+    transform: translateY(0);
+  }
+
+  50% {
+    transform: translateY(-8px);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
