--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
 #welcome-section {
   transition: clip-path 1s ease;
   clip-path: inset(0 0 0 0);
-  background: linear-gradient(130deg, #cf62b8, #8a2be2, #3e27bd);
+  background: linear-gradient(130deg, #e76991,rgb(221, 100, 232), #77a3ef);
   background-size: 400% 400%;
   animation: gradientMove 12s ease infinite;
 }
@@ -55,6 +55,20 @@ body {
     background-position: 0% 50%;
   }
 }
+
+/* .sphere { */
+  /* position: absolute; */
+  /* border-radius: 50%; */
+  /* filter: blur(25px); */
+  /* opacity: 0.6; */
+  /* animation: floatSphere 12s ease-in-out infinite; */
+/* } */
+/*  */
+/* @keyframes floatSphere { */
+  /* 0% { transform: translateY(0px) translateX(0px); } */
+  /* 50% { transform: translateY(-60px) translateX(40px); } */
+  /* 100% { transform: translateY(0px) translateX(0px); } */
+/* } */
 
 .floating-shapes {
   position: absolute;
